/**
 * AI Agent æœåŠ¡
 *
 * é‡æ„åçš„ç‰ˆæœ¬ï¼šåªä¿ç•™ HTTP API æ–¹æ³•ã€‚
 * RSocket ä¼šè¯ç®¡ç†å·²ç§»è‡³ useSessionTabï¼ˆæ¯ä¸ª Tab ç›´æ¥æŒæœ‰ RSocketSession å®ä¾‹ï¼‰ã€‚
 */

import {ProtoCodec} from './rsocket/protoCodec'
import type {RSocketSession} from './rsocket/RSocketSession'
import type {HistorySessionMetadata} from '@/types/session'
import type {RpcMessage} from '@/types/rpc'
import {resolveServerHttpUrl} from '@/utils/serverUrl'

// é‡æ–°å¯¼å‡ºç±»å‹ä»¥ä¿æŒå‘åå…¼å®¹
export type {ConnectOptions} from './rsocket/RSocketSession'

/** å†å²æ–‡ä»¶å…ƒæ•°æ® */
export interface HistoryMetadata {
    totalLines: number      // JSONL æ–‡ä»¶æ€»è¡Œæ•°
    sessionId: string       // ä¼šè¯ ID
    projectPath: string     // é¡¹ç›®è·¯å¾„
    customTitle?: string    // è‡ªå®šä¹‰æ ‡é¢˜ï¼ˆä» /rename å‘½ä»¤è®¾ç½®ï¼‰
}

/**
 * AI Agent HTTP æœåŠ¡
 *
 * æ³¨æ„ï¼šRSocket ä¼šè¯ç›¸å…³æ“ä½œå·²ç§»è‡³ useSessionTabï¼Œ
 * æ­¤æœåŠ¡åªè´Ÿè´£çº¯ HTTP API è°ƒç”¨ï¼ˆå†å²è®°å½•åŠ è½½ç­‰ï¼‰ã€‚
 */
export class AiAgentService {

    /**
     * è·å–é¡¹ç›®çš„å†å²ä¼šè¯åˆ—è¡¨ï¼ˆé€šè¿‡ HTTPï¼Œé¿å… RSocket è¿æ¥ï¼‰
     *
     * @param maxResults æœ€å¤§ç»“æœæ•°ï¼ˆé»˜è®¤ 50ï¼‰
     * @returns å†å²ä¼šè¯åˆ—è¡¨
     */
    async getHistorySessions(maxResults: number = 50, offset: number = 0): Promise<HistorySessionMetadata[]> {
        try {
            console.log(`ğŸ“‹ [HTTP] è·å–å†å²ä¼šè¯åˆ—è¡¨ (offset=${offset}, maxResults=${maxResults})`)

            // ä½¿ç”¨ HTTP è°ƒç”¨ï¼ˆä¸ä¾èµ– RSocket è¿æ¥ï¼‰
            const baseUrl = resolveServerHttpUrl()
            const url = `${baseUrl}/api/history/sessions?offset=${offset}&maxResults=${maxResults}`

            const response = await fetch(url)
            if (!response.ok) {
                throw new Error(`HTTP ${response.status}: ${response.statusText}`)
            }

            const result = await response.json()
            // è°ƒè¯•æ—¥å¿—ï¼šæ‰“å°åç«¯è¿”å›çš„åŸå§‹æ•°æ®
            console.log('ğŸ“‹ [HTTP] åç«¯è¿”å›çš„å†å²ä¼šè¯åŸå§‹æ•°æ®:', JSON.stringify(result, null, 2))
            return result.sessions || []
        } catch (error) {
            console.warn('[aiAgentService] è·å–å†å²ä¼šè¯åˆ—è¡¨å¤±è´¥:', error)
            return []
        }
    }

    /**
     * åŠ è½½å†å²æ¶ˆæ¯ï¼ˆéæµå¼ï¼Œä¸€æ¬¡æ€§è¿”å›ç»“æœï¼‰
     */
    async loadHistory(
        params: { sessionId?: string; projectPath?: string; offset?: number; limit?: number }
    ): Promise<{ messages: RpcMessage[]; offset: number; count: number; availableCount: number }> {
        console.log('ğŸ“œ [AiAgentService] åŠ è½½å†å² (HTTP protobuf):', params)

        const baseUrl = resolveServerHttpUrl()
        const url = `${baseUrl}/api/history/load.pb`

        const body = ProtoCodec.encodeLoadHistoryRequest({
            sessionId: params.sessionId,
            projectPath: params.projectPath,
            offset: params.offset,
            limit: params.limit
        })

        const response = await fetch(url, {
            method: 'POST',
            headers: {
                'Content-Type': 'application/octet-stream'
            },
            body
        })

        if (!response.ok) {
            throw new Error(`HTTP ${response.status}: ${response.statusText}`)
        }

        const buffer = new Uint8Array(await response.arrayBuffer())
        // ç±»å‹æ–­è¨€è§£å†³ä¸åŒè·¯å¾„å¯¼å…¥ RpcMessage ç±»å‹ä¸å…¼å®¹çš„é—®é¢˜
        return ProtoCodec.decodeHistoryResult(buffer) as any
    }

    /**
     * åŠ è½½å­ä»£ç†å†å²æ¶ˆæ¯
     *
     * @param agentId å­ä»£ç† IDï¼ˆå¦‚ "afd66ee"ï¼‰
     * @param projectPath é¡¹ç›®è·¯å¾„ï¼ˆç”¨äºå®šä½å†å²æ–‡ä»¶ç›®å½•ï¼‰
     * @returns å­ä»£ç†çš„å†å²æ¶ˆæ¯åˆ—è¡¨
     */
    async loadSubagentHistory(
        agentId: string,
        projectPath: string
    ): Promise<RpcMessage[]> {
        console.log('ğŸ”„ [AiAgentService] åŠ è½½å­ä»£ç†å†å²:', {agentId, projectPath})

        // å­ä»£ç†çš„ sessionId æ ¼å¼ä¸º agent-{agentId}
        const result = await this.loadHistory({
            sessionId: `agent-${agentId}`,
            projectPath
        })

        return result.messages
    }

    /**
     * åˆ é™¤å†å²ä¼šè¯ï¼ˆåˆ é™¤ JSONL æ–‡ä»¶ï¼‰
     *
     * @param sessionId ä¼šè¯ ID
     * @returns åˆ é™¤ç»“æœ
     */
    async deleteHistorySession(sessionId: string): Promise<{ success: boolean; error?: string }> {
        try {
            console.log(`ğŸ—‘ï¸ [HTTP] åˆ é™¤å†å²ä¼šè¯: ${sessionId}`)

            const baseUrl = resolveServerHttpUrl()
            const url = `${baseUrl}/api/history/sessions/${encodeURIComponent(sessionId)}`

            const response = await fetch(url, {
                method: 'DELETE'
            })

            if (!response.ok) {
                const errorData = await response.json().catch(() => ({}))
                throw new Error(errorData.error || `HTTP ${response.status}: ${response.statusText}`)
            }

            const result = await response.json()
            console.log('ğŸ—‘ï¸ [HTTP] åˆ é™¤ç»“æœ:', result)
            return result
        } catch (error) {
            console.error('[aiAgentService] åˆ é™¤å†å²ä¼šè¯å¤±è´¥:', error)
            return { success: false, error: error instanceof Error ? error.message : 'Unknown error' }
        }
    }

    /**
     * è·å–å†å²æ–‡ä»¶å…ƒæ•°æ®ï¼ˆæ–‡ä»¶æ€»è¡Œæ•°ç­‰ï¼‰
     *
     * @param params æŸ¥è¯¢å‚æ•°
     * @returns å†å²æ–‡ä»¶å…ƒæ•°æ®
     */
    async getHistoryMetadata(
        params: { sessionId?: string; projectPath?: string }
    ): Promise<HistoryMetadata> {
        console.log('ğŸ“Š [AiAgentService] è·å–å†å²å…ƒæ•°æ® (HTTP protobuf):', params)

        const baseUrl = resolveServerHttpUrl()
        const url = `${baseUrl}/api/history/metadata.pb`

        const body = ProtoCodec.encodeGetHistoryMetadataRequest({
            sessionId: params.sessionId,
            projectPath: params.projectPath
        })

        const response = await fetch(url, {
            method: 'POST',
            headers: {
                'Content-Type': 'application/octet-stream'
            },
            body
        })

        if (!response.ok) {
            throw new Error(`HTTP ${response.status}: ${response.statusText}`)
        }

        const buffer = new Uint8Array(await response.arrayBuffer())
        const meta = ProtoCodec.decodeHistoryMetadata(buffer)
        return {
            totalLines: meta.totalLines,
            sessionId: meta.sessionId,
            projectPath: meta.projectPath,
            customTitle: meta.customTitle
        }
    }

    /**
     * æˆªæ–­å†å²è®°å½•ï¼ˆç”¨äºç¼–è¾‘é‡å‘åŠŸèƒ½ï¼‰
     *
     * ä»æŒ‡å®šçš„æ¶ˆæ¯ UUID å¼€å§‹æˆªæ–­ JSONL å†å²æ–‡ä»¶ï¼Œè¯¥æ¶ˆæ¯åŠå…¶åç»­æ‰€æœ‰æ¶ˆæ¯éƒ½ä¼šè¢«åˆ é™¤ã€‚
     * è¿™æ˜¯ä¸€ä¸ªæ–‡ä»¶æ“ä½œï¼Œä¸ä¾èµ–äºç‰¹å®šä¼šè¯çŠ¶æ€ï¼Œä½†éœ€è¦ä¸€ä¸ªå·²è¿æ¥çš„ RSocket è¿æ¥æ¥å‘é€è¯·æ±‚ã€‚
     *
     * @param session ä»»æ„å·²è¿æ¥çš„ RSocketSession å®ä¾‹ï¼ˆç”¨äºå‘é€ RSocket è¯·æ±‚ï¼‰
     * @param params æˆªæ–­å‚æ•°
     * @param params.sessionId ç›®æ ‡ä¼šè¯ IDï¼ˆå†å²æ–‡ä»¶æ ‡è¯†ï¼‰
     * @param params.messageUuid è¦æˆªæ–­çš„æ¶ˆæ¯ UUIDï¼ˆä»è¯¥æ¶ˆæ¯å¼€å§‹æˆªæ–­ï¼ŒåŒ…å«è¯¥æ¶ˆæ¯ï¼‰
     * @param params.projectPath é¡¹ç›®è·¯å¾„ï¼ˆç”¨äºå®šä½ JSONL æ–‡ä»¶ï¼‰
     * @returns æˆªæ–­ç»“æœ
     */
    async truncateHistory(
        session: RSocketSession,
        params: {
            sessionId: string
            messageUuid: string
            projectPath: string
        }
    ): Promise<{ success: boolean; remainingLines: number; error?: string }> {
        console.log('âœ‚ï¸ [AiAgentService] æˆªæ–­å†å²:', params)

        if (!session.isConnected) {
            throw new Error('RSocket è¿æ¥æœªå»ºç«‹')
        }

        return await session.truncateHistory(params)
    }
}

// å¯¼å‡ºå•ä¾‹
export const aiAgentService = new AiAgentService()
