/**
 * RSocket ä¼šè¯ç®¡ç†
 *
 * åŸºäº RSocket + Protobuf çš„ä¼šè¯å®ç°ï¼Œä¸ AiAgentSession æ¥å£å…¼å®¹ã€‚
 * ä¸»è¦ä¼˜åŠ¿ï¼š
 * - åè®®å±‚çš„æµç»“æŸä¿¡å·ï¼ˆonCompleteï¼‰ï¼Œæ— éœ€è§£ææ¶ˆæ¯å†…å®¹åˆ¤æ–­
 * - äºŒè¿›åˆ¶åºåˆ—åŒ–ï¼Œæ›´é«˜æ•ˆ
 * - å¼ºç±»å‹ï¼Œç¼–è¯‘æ—¶æ£€æŸ¥
 */

import { RSocketClient, createRSocketClient } from './RSocketClient'
import { ProtoCodec } from './protoCodec'
import { resolveServerWsUrl } from '@/utils/serverUrl'
import { loggers } from '@/utils/logger'
import type {
  RpcProvider,
  RpcContentBlock,
  RpcStreamEvent,
  RpcConnectOptions,
  RpcCapabilities,
  RpcPermissionMode,
  RpcSetPermissionModeResult,
  RpcMessage
} from '@/types/rpc'
import type { HistorySessionMetadata } from '@/types/session'

const log = loggers.agent

// é‡æ–°å¯¼å‡ºç±»å‹ï¼Œä¿æŒå‘åå…¼å®¹
export type { RpcProvider, RpcContentBlock, RpcStreamEvent, RpcConnectOptions }

/** è¿æ¥é€‰é¡¹ï¼ˆå‘åå…¼å®¹åˆ«åï¼‰ */
export type ConnectOptions = RpcConnectOptions

/** æµå¼äº‹ä»¶ï¼ˆå‘åå…¼å®¹åˆ«åï¼‰ */
export type AgentStreamEvent = RpcStreamEvent

/** å†…å®¹å—ï¼ˆå‘åå…¼å®¹åˆ«åï¼‰ */
export type ContentBlock = RpcContentBlock

type MessageHandler = (message: RpcMessage) => void
type ErrorHandler = (error: Error) => void

/**
 * RSocket ä¼šè¯
 *
 * ä¸ AiAgentSession æ¥å£å…¼å®¹ï¼Œä½†åº•å±‚ä½¿ç”¨ RSocket + Protobuf
 */
export class RSocketSession {
  private client: RSocketClient | null = null
  private _isConnected = false
  private sessionId: string | null = null
  private _capabilities: RpcCapabilities | null = null
  private messageHandlers = new Set<MessageHandler>()
  private errorHandlers = new Set<ErrorHandler>()
  private cancelStream: (() => void) | null = null
  private wsUrl: string
  /** ç­‰å¾…è¿æ¥åæ³¨å†Œçš„ handlers */
  private pendingHandlers = new Map<string, (params: any) => Promise<any>>()

  constructor(wsUrl?: string) {
    if (wsUrl) {
      this.wsUrl = wsUrl.replace(/^http/, 'ws')
    } else {
      this.wsUrl = resolveServerWsUrl()
    }
    log.debug(`[RSocketSession] WebSocket URL: ${this.wsUrl}`)
  }

  get isConnected(): boolean {
    return this._isConnected
  }

  get currentSessionId(): string | null {
    return this.sessionId
  }

  get capabilities(): RpcCapabilities | null {
    return this._capabilities
  }

  /**
   * è¿æ¥åˆ°æœåŠ¡å™¨å¹¶åˆå§‹åŒ–ä¼šè¯
   */
  async connect(options?: ConnectOptions): Promise<string> {
    console.log('[RSocket] â† agent.connect å‘é€:', JSON.stringify(options, null, 2))

    // åˆ›å»º RSocket å®¢æˆ·ç«¯
    this.client = createRSocketClient(this.wsUrl)

    try {
      // å»ºç«‹ RSocket è¿æ¥
      await this.client.connect()

      // å‘é€ connect è¯·æ±‚
      const data = ProtoCodec.encodeConnectOptions(options)
      const responseData = await this.client.requestResponse('agent.connect', data)

      const result = ProtoCodec.decodeConnectResult(responseData)
      console.log('[RSocket] â†’ agent.connect ç»“æœ:', JSON.stringify(result, null, 2))
      this.sessionId = result.sessionId
      this._capabilities = result.capabilities || null
      this._isConnected = true

      // æ³¨å†Œç­‰å¾…ä¸­çš„ handlers
      for (const [method, handler] of this.pendingHandlers) {
        log.info(`[RSocketSession] æ³¨å†Œç­‰å¾…ä¸­çš„ handler: ${method}`)
        this.client!.registerHandler(method, handler)
      }
      this.pendingHandlers.clear()

      log.info(`[RSocketSession] ä¼šè¯å·²è¿æ¥: ${this.sessionId}`)
      return this.sessionId

    } catch (error) {
      log.error('[RSocketSession] è¿æ¥å¤±è´¥:', error)
      this.handleError(error as Error)
      throw error
    }
  }

  /**
   * å‘é€æ¶ˆæ¯æŸ¥è¯¢ (çº¯æ–‡æœ¬)
   */
  async sendMessage(message: string): Promise<void> {
    if (!this._isConnected || !this.client) {
      throw new Error('Session not connected')
    }

    console.log('[RSocket] â† agent.query å‘é€:', JSON.stringify({ message }, null, 2))

    const data = ProtoCodec.encodeQueryRequest(message)

    // ä½¿ç”¨ Request-Stream è·å–æµå¼å“åº”
    this.cancelStream = this.client.requestStream('agent.query', data, {
      onNext: (responseData) => {
        try {
          const rpcMessage = ProtoCodec.decodeRpcMessage(responseData)
          console.log('[RSocket] â†’ agent.query æ¶ˆæ¯:', JSON.stringify(rpcMessage, null, 2))
          this.notifyMessageHandlers(rpcMessage)
        } catch (error) {
          log.error('[RSocketSession] è§£ææ¶ˆæ¯å¤±è´¥:', error)
        }
      },
      onError: (error) => {
        log.error('[RSocketSession] æµé”™è¯¯:', error)
        this.handleError(error)
      },
      onComplete: () => {
        log.debug('[RSocketSession] æµå®Œæˆ (åè®®å±‚ä¿¡å·)')
        // RSocket åè®®å±‚çš„ onComplete ä¿¡å·ï¼Œè¡¨ç¤ºæµç»“æŸ
        // æ— éœ€è§£ææ¶ˆæ¯å†…å®¹æ¥åˆ¤æ–­ç»“æŸ
        this.cancelStream = null
      }
    })
  }

  /**
   * å‘é€æ¶ˆæ¯æŸ¥è¯¢ (æ”¯æŒå›¾ç‰‡ç­‰å¯Œåª’ä½“å†…å®¹)
   */
  async sendMessageWithContent(content: ContentBlock[]): Promise<void> {
    if (!this._isConnected || !this.client) {
      throw new Error('Session not connected')
    }

    console.log('[RSocket] â† agent.queryWithContent å‘é€:', JSON.stringify({ content }, null, 2))

    const data = ProtoCodec.encodeQueryWithContentRequest(content)

    this.cancelStream = this.client.requestStream('agent.queryWithContent', data, {
      onNext: (responseData) => {
        try {
          const rpcMessage = ProtoCodec.decodeRpcMessage(responseData)
          console.log('[RSocket] â†’ agent.queryWithContent æ¶ˆæ¯:', JSON.stringify(rpcMessage, null, 2))
          this.notifyMessageHandlers(rpcMessage)
        } catch (error) {
          log.error('[RSocketSession] è§£ææ¶ˆæ¯å¤±è´¥:', error)
        }
      },
      onError: (error) => {
        log.error('[RSocketSession] æµé”™è¯¯:', error)
        this.handleError(error)
      },
      onComplete: () => {
        log.debug('[RSocketSession] æµå®Œæˆ')
        this.cancelStream = null
      }
    })
  }

  /**
   * ä¸­æ–­å½“å‰æ“ä½œ
   */
  async interrupt(): Promise<void> {
    if (!this._isConnected || !this.client) {
      throw new Error('Session not connected')
    }

    log.info('[RSocketSession] ä¸­æ–­è¯·æ±‚')

    // å–æ¶ˆå½“å‰æµï¼ˆå¦‚æœæœ‰ï¼‰
    if (this.cancelStream) {
      this.cancelStream()
      this.cancelStream = null
    }

    // å‘é€ interrupt è¯·æ±‚
    const responseData = await this.client.requestResponse('agent.interrupt')
    const result = ProtoCodec.decodeStatusResult(responseData)

    log.info(`[RSocketSession] ä¸­æ–­å®Œæˆ: ${result.status}`)

    // é€šçŸ¥ handlers
    const interruptMessage = {
      type: 'result' as const,
      subtype: 'interrupted',
      provider: 'claude' as const,
      is_error: false,
      num_turns: 0
    }
    this.notifyMessageHandlers(interruptMessage as any)
  }

  /**
   * æ–­å¼€è¿æ¥
   */
  async disconnect(): Promise<void> {
    if (this._isConnected && this.client) {
      try {
        await this.client.requestResponse('agent.disconnect')
      } catch (error) {
        log.warn('[RSocketSession] disconnect è¯·æ±‚å¤±è´¥:', error)
      }

      this.client.disconnect()
      this.client = null
      this._isConnected = false
      this.sessionId = null

      log.info('[RSocketSession] å·²æ–­å¼€è¿æ¥')
    }
  }

  /**
   * é‡è¿ä¼šè¯ï¼ˆå¤ç”¨è¿æ¥ï¼‰
   */
  async reconnectSession(options?: ConnectOptions): Promise<string> {
    if (!this.client?.isConnected) {
      throw new Error('RSocket æœªè¿æ¥ï¼Œæ— æ³•é‡è¿ä¼šè¯')
    }

    log.info('[RSocketSession] reconnectSession: é‡è¿ä¼šè¯')

    // å‘é€ disconnect RPC
    await this.client.requestResponse('agent.disconnect')
    this.sessionId = null

    // å‘é€ connect RPC
    const data = ProtoCodec.encodeConnectOptions(options)
    const responseData = await this.client.requestResponse('agent.connect', data)

    const result = ProtoCodec.decodeConnectResult(responseData)
    this.sessionId = result.sessionId
    this._capabilities = result.capabilities || null
    this._isConnected = true

    log.info(`[RSocketSession] ä¼šè¯å·²é‡è¿: ${this.sessionId}`)
    return this.sessionId!
  }

  /**
   * è®¾ç½®æ¨¡å‹
   */
  async setModel(model: string): Promise<void> {
    if (!this._isConnected || !this.client) {
      throw new Error('Session not connected')
    }

    console.log('[RSocket] â† agent.setModel å‘é€:', JSON.stringify({ model }, null, 2))
    const data = ProtoCodec.encodeSetModelRequest(model)
    await this.client.requestResponse('agent.setModel', data)
    console.log('[RSocket] â†’ agent.setModel ç»“æœ: OK')
  }

  /**
   * è®¾ç½®æƒé™æ¨¡å¼
   */
  async setPermissionMode(mode: RpcPermissionMode): Promise<RpcSetPermissionModeResult> {
    if (!this._isConnected || !this.client) {
      throw new Error('Session not connected')
    }

    this.checkCapability('canSwitchPermissionMode', 'setPermissionMode')

    console.log('[RSocket] â† agent.setPermissionMode å‘é€:', JSON.stringify({ mode }, null, 2))
    const data = ProtoCodec.encodeSetPermissionModeRequest(mode)
    const responseData = await this.client.requestResponse('agent.setPermissionMode', data)
    const result = ProtoCodec.decodeSetPermissionModeResult(responseData)
    console.log('[RSocket] â†’ agent.setPermissionMode ç»“æœ:', JSON.stringify(result, null, 2))

    return result as RpcSetPermissionModeResult
  }

  /**
   * è·å–å†å²æ¶ˆæ¯
   */
  async getHistory(): Promise<AgentStreamEvent[]> {
    if (!this._isConnected || !this.client) {
      throw new Error('Session not connected')
    }

    console.log('[RSocket] â† agent.getHistory å‘é€')
    const responseData = await this.client.requestResponse('agent.getHistory')
    const result = ProtoCodec.decodeHistory(responseData)
    console.log('[RSocket] â†’ agent.getHistory ç»“æœ:', JSON.stringify(result, null, 2))
    return result.messages as AgentStreamEvent[]
  }

  /**
   * åŠ è½½å†å²æ¶ˆæ¯ï¼ˆä»æœ¬åœ°å­˜å‚¨çš„ jsonlï¼‰
   * æ”¹ä¸º Request-Response æ¨¡å¼ï¼Œä¸€æ¬¡æ€§è¿”å›ç»“æœ
   */
  async loadHistory(params: {
    sessionId?: string
    projectPath?: string
    offset?: number
    limit?: number
  }): Promise<{ messages: RpcMessage[]; offset: number; count: number; availableCount: number }> {
    if (!this._isConnected || !this.client) {
      throw new Error('Session not connected')
    }

    console.log('[RSocket] ğŸ“œ â† agent.loadHistory å‘é€:', params)

    const payload = ProtoCodec.encodeLoadHistoryRequest(params)
    const responseData = await this.client.requestResponse('agent.loadHistory', payload)
    const result = ProtoCodec.decodeHistoryResult(responseData)

    console.log(
      `[RSocket] ğŸ“œ â†’ agent.loadHistory ç»“æœ: count=${result.count}, offset=${result.offset}, availableCount=${result.availableCount}`
    )

    return result
  }

  /**
   * è·å–é¡¹ç›®çš„å†å²ä¼šè¯åˆ—è¡¨
   */
  async getHistorySessions(maxResults: number = 50, offset: number = 0): Promise<HistorySessionMetadata[]> {
    if (!this._isConnected || !this.client) {
      throw new Error('Session not connected')
    }

    console.log('[RSocket] â† agent.getHistorySessions å‘é€:', JSON.stringify({ offset, maxResults }, null, 2))
    const data = ProtoCodec.encodeGetHistorySessionsRequest(maxResults, offset)
    const responseData = await this.client.requestResponse('agent.getHistorySessions', data)
    const result = ProtoCodec.decodeHistorySessionsResult(responseData)
    console.log('[RSocket] â†’ agent.getHistorySessions ç»“æœ:', JSON.stringify(result, null, 2))
    return result.sessions
  }

  /**
   * è·å–å†å²æ–‡ä»¶å…ƒæ•°æ®ï¼ˆæ–‡ä»¶æ€»è¡Œæ•°ç­‰ï¼‰
   */
  async getHistoryMetadata(params: { sessionId?: string; projectPath?: string }): Promise<{ totalLines: number; sessionId: string; projectPath: string }> {
    if (!this._isConnected || !this.client) {
      throw new Error('Session not connected')
    }

    console.log('[RSocket] â† agent.getHistoryMetadata å‘é€:', JSON.stringify(params, null, 2))
    const payload = ProtoCodec.encodeGetHistoryMetadataRequest(params)
    const responseData = await this.client.requestResponse('agent.getHistoryMetadata', payload)
    const result = ProtoCodec.decodeHistoryMetadata(responseData)
    console.log('[RSocket] â†’ agent.getHistoryMetadata ç»“æœ:', JSON.stringify(result, null, 2))
    return result
  }

  /**
   * è®¢é˜…æ¶ˆæ¯äº‹ä»¶
   */
  onMessage(handler: MessageHandler): () => void {
    this.messageHandlers.add(handler)
    return () => this.messageHandlers.delete(handler)
  }

  /**
   * è®¢é˜…é”™è¯¯äº‹ä»¶
   */
  onError(handler: ErrorHandler): () => void {
    this.errorHandlers.add(handler)
    return () => this.errorHandlers.delete(handler)
  }

  /**
   * æ³¨å†ŒæœåŠ¡å™¨è¯·æ±‚å¤„ç†å™¨ï¼ˆåŒå‘ RPCï¼‰
   *
   * æœåŠ¡ç«¯å¯ä»¥é€šè¿‡ client.call è·¯ç”±è°ƒç”¨å®¢æˆ·ç«¯æ³¨å†Œçš„æ–¹æ³•
   */
  register(method: string, handler: (params: any) => Promise<any>): () => void {
    if (!this.client) {
      log.warn(`[RSocketSession] register: å®¢æˆ·ç«¯æœªè¿æ¥ï¼Œhandler å°†åœ¨è¿æ¥åç”Ÿæ•ˆ (method=${method})`)
      // æš‚å­˜ handlerï¼Œç­‰å¾…è¿æ¥
      this.pendingHandlers.set(method, handler)
      return () => {
        this.pendingHandlers.delete(method)
      }
    }

    log.info(`[RSocketSession] register: ${method}`)
    return this.client.registerHandler(method, handler)
  }

  // ==================== ç§æœ‰æ–¹æ³• ====================

  private checkCapability(cap: keyof RpcCapabilities, method: string): void {
    if (!this._capabilities) {
      throw new Error(`${method}: èƒ½åŠ›ä¿¡æ¯æœªåŠ è½½ï¼Œè¯·å…ˆè°ƒç”¨ connect()`)
    }
    if (!this._capabilities[cap]) {
      throw new Error(`${method}: å½“å‰ provider ä¸æ”¯æŒæ­¤æ“ä½œ`)
    }
  }

  private notifyMessageHandlers(message: RpcMessage): void {
    this.messageHandlers.forEach(handler => {
      try {
        handler(message)
      } catch (error) {
        log.error('[RSocketSession] æ¶ˆæ¯å¤„ç†å™¨æ‰§è¡Œå¤±è´¥:', error)
      }
    })
  }

  private handleError(error: Error): void {
    this.errorHandlers.forEach(handler => {
      try {
        handler(error)
      } catch (err) {
        log.error('[RSocketSession] é”™è¯¯å¤„ç†å™¨æ‰§è¡Œå¤±è´¥:', err)
      }
    })
  }
}
